--- a/VRChat/79/1298179.html
+++ b/VRChat/79/1298179.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>
       ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero) -
-      Scena's 3D Models (VRchat) - BOOTH
+      Scena's 3D Assets - BOOTH
     </title>
     <meta name="description" content=
     "This is Young Raphtalia (ラフタリア) From Rising of the Shield Hero (盾の勇者の成り上がり Tate no Yūsha no Nariagari) I spend around two or so months working on this and it's finally in a state in which I am happy to say can be sold, I hope you all enjoy! Shout-out to UMR/CodeAldnoah for helping with the texture">
@@ -15,14 +15,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero) - Scena's 3D Models (VRchat) - BOOTH">
+    "ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero) - Scena's 3D Assets - BOOTH">
     <meta name="twitter:description" content=
     "This is Young Raphtalia (ラフタリア) From Rising of the Shield Hero (盾の勇者の成り上がり Tate no Yūsha no Nariagari) I spend around two or so months working on this and it's finally in a state in which I am happy to say can be sold, I hope you all enjoy! Shout-out to UMR/CodeAldnoah for helping with the texture">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/d699f819-1a43-4553-8ab4-b5591249ded8/i/1298179/0981219e-7236-45a9-9657-e6e2d0778612_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero) - Scena's 3D Models (VRchat) - BOOTH">
+    "ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero) - Scena's 3D Assets - BOOTH">
     <meta property="og:description" content=
     "This is Young Raphtalia (ラフタリア) From Rising of the Shield Hero (盾の勇者の成り上がり Tate no Yūsha no Nariagari) I spend around two or so months working on this and it's finally in a state in which I am happy to say can be sold, I hope you all enjoy! Shout-out to UMR/CodeAldnoah for helping with the texture">
     <meta property="og:image" content=
@@ -69,9 +69,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "Oa0nFNHyLkGfpUU+RuHtKv0wePssz2L08yLtifIU9RQ="></script>
+    "eqfa5gBdO8I31Lly24kqqdfT5u8E49UJvc0NTukb2Pc="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="Oa0nFNHyLkGfpUU+RuHtKv0wePssz2L08yLtifIU9RQ="></script>
+    nonce="eqfa5gBdO8I31Lly24kqqdfT5u8E49UJvc0NTukb2Pc="></script>
     <script id="shop_with_items" type="text/x-template">
     <div class="shop-card l-card" v-if="shop"><div class="shop-card__box-wrap"><div class="shop-card__box"><div class="shop-card-box-body"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><div class="shop-card__thumbnails"><div class="shop-card__thumbnails--at-left on-white-bg"><img :alt="largeThumbItem.name" :data-original="hideThumbnail(largeThumbItem) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : largeThumbItem.image_url" class="lazyload u-w-100" /></div><div class="shop-card__thumbnails--at-right"><div class="shop-card__thumbnail-wrap on-white-bg" v-for="item in smallThumbItems"><div class="shop-card__thumbnail"><img :alt="item.name" :data-original="hideThumbnail(item) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : item.image_url" class="lazyload u-w-100" /></div></div></div></div></a></div><div class="shop-card__box-footer"><div class="shop-card__owner-info"><div class="shop-card__avatar"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><img :alt="shop.user.nickname" :data-original="shop.user.thumbnail_url" class="lazyload user_avatar-48 mobile-user_avatar-38" height="42" width="42" /></a></div><div class="shop-card__shop-name"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" class="text-ui" target="_blank">{{ shop.name }}</a></div></div><div class="shop-card__actions"><div :data-follow-path="shop.follow_path" :data-ga-from="gaParams.from" :data-ga-via="gaParams.via" :data-is-following="shop.following" :data-subdomain="shop.subdomain" class="js-follow-button-mount"></div></div></div></div></div></div>
     </script>
@@ -84,7 +84,7 @@
     <script src=
     "https://asset.booth.pm/assets/0238fbca757db8a14a80.js" defer=
     "defer" nonce=
-    "Oa0nFNHyLkGfpUU+RuHtKv0wePssz2L08yLtifIU9RQ="></script>
+    "eqfa5gBdO8I31Lly24kqqdfT5u8E49UJvc0NTukb2Pc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero)","description":"This is Young Raphtalia (ラフタリア) From Rising of the Shield Hero (盾の勇者の成り上がり Tate no Yūsha no Nariagari)\n\nI spend around two or so months working on this and it's finally in a state in which I am happy to say can be sold, I hope you all enjoy!\n\n\nShout-out to UMR/CodeAldnoah for helping with the texture work! ","url":"https://booth.pm/ja/items/1298179","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2200"},"image":"https://booth.pximg.net/c/620x620/d699f819-1a43-4553-8ab4-b5591249ded8/i/1298179/0981219e-7236-45a9-9657-e6e2d0778612_base_resized.jpg"}
     </script>
@@ -98,7 +98,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Oa0nFNHyLkGfpUU+RuHtKv0wePssz2L08yLtifIU9RQ="></script>
+    nonce="eqfa5gBdO8I31Lly24kqqdfT5u8E49UJvc0NTukb2Pc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -156,12 +156,11 @@
                             href="https://scena.booth.pm/">
                             <div class=
                             "u-d-flex u-align-items-center">
-                              <img alt="Scena's 3D Models (VRchat)"
-                              class="user-avatar at-item-summary"
-                              src=
+                              <img alt="Scena's 3D Assets" class=
+                              "user-avatar at-item-summary" src=
                               "https://booth.pximg.net/c/48x48/users/6315682/icon_image/22f1f1bc-0fc0-4e0a-ba0c-cf99e9817a52_base_resized.jpg">
                               <div class="u-text-ellipsis">
-                                Scena's 3D Models (VRchat)
+                                Scena's 3D Assets
                               </div>
                             </div></a>
                           </div>
@@ -235,7 +234,7 @@
                             "https://booth.pm/ja/items/1298179"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero) | Scena's 3D Models (VRchat)"
+                            "ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero) | Scena's 3D Assets"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
